# secon-dev-n-year-summary-vibe-cording

./: .env.sample  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: daily_summary.yml  pytest.yml  schedule.yml
docs/: specification.md
secon_year_summary/: __init__.py  cli.py
secon_year_summary/models/: __init__.py  article.py
secon_year_summary/services/: image_service.py  llm_service.py  post_service.py
tests/: conftest.py  test_article_fetcher.py
tests/models/: test_article.py
tests/services/: test_image_service.py  test_llm_service.py
