[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "secon-year-summary"
version = "0.1.0"
description = "secon.dev年間サマリー生成ツール"
requires-python = ">=3.12"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiohttp",
    "beautifulsoup4",
    "openai",
    "google-generativeai",
    "anthropic",
    "pillow",
    "python-dotenv",
    "asyncio",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.2.0",
    "pyright>=1.1.399",
]

[project.scripts]
secon-year-summary = "secon_year_summary.cli:main"

[tool.setuptools]
packages = ["secon_year_summary"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["secon_year_summary"]

[tool.pyright]
include = ["secon_year_summary", "tests"]
typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.12" 

